tests/machine/x/java/map_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_assign1788952885/001/Main.java:11: error: cannot find symbol
	scores.put("bob", 2);
	      ^
  symbol:   method put(String,int)
  location: variable scores of type DataClass1
/tmp/TestCompileValidProgramsmap_assign1788952885/001/Main.java:12: error: cannot find symbol
	System.out.println(scores.get("bob"));
	                         ^
  symbol:   method get(String)
  location: variable scores of type DataClass1
2 errors


  1| var scores = {"alice": 1}
  2| scores["bob"] = 2